added constants AES_EXTENDED and AES_NAES for modes 64 and 65 of mt_appl_getinfo(), as suggested by Martin Elsaesser.

--- a/gemlib/mt_gem.h.in
+++ b/gemlib/mt_gem.h.in
@@ -91,6 +91,8 @@ __BEGIN_DECLS
 #define AES_MESSAGE			12	/**< see  mt_appl_getinfo() */
 #define AES_OBJECT			13	/**< see  mt_appl_getinfo() */
 #define AES_FORM			14	/**< see  mt_appl_getinfo() */
+#define AES_EXTENDED		64	/**< see  mt_appl_getinfo() */
+#define AES_NAES			65	/**< see  mt_appl_getinfo() */
 #define AES_VERSION         96  /**< see  mt_appl_getinfo() and  mt_appl_getinfo_str() */
 
 /* appl_getinfo return values (AES_LARGEFONT, AES_SMALLFONT) */
